fix: truncate decimals

--- a/client/src/output.css
+++ b/client/src/output.css
@@ -1340,6 +1340,10 @@ video {
   font-weight: 600;
 }
 
+.font-normal{
+  font-weight: 400;
+}
+
 .uppercase{
   text-transform: uppercase;
 }
